complete gridView in main page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#00C73C</color>
     <color name="colorPrimaryDark">#00912C</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#D4D4D4</color>
 </resources>
