complete layout in user profile

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#00C73C</color>
     <color name="colorPrimaryDark">#00912C</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#469664</color>
     <color name="colorBackground">#D4D4D4</color>
 </resources>
