--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#00912C</color>
     <color name="colorAccent">#469664</color>
     <color name="colorBackground">#D4D4D4</color>
+    <color name="colorRed">#fe8256</color>
+    <color name="colorLightblue">#899bfe</color>
+    <color name="colorLightgreen">#455b66</color>
+    <color name="colorYellow">#fed03c</color>
+    <color name="colorBlue">#3c5bfe</color>
 </resources>
