change textview to button in layouts page && first draft of conference agenda

--- a/app/src/main/res/layout/fragment_layouts_dock.xml
+++ b/app/src/main/res/layout/fragment_layouts_dock.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <Button
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_marginRight="@dimen/layouts_margin"
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent">
 
-            <TextView
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginBottom="@dimen/layouts_margin"
@@ -50,21 +50,21 @@
                     android:layout_weight="1"
                     android:layout_marginRight="@dimen/layouts_margin">
 
-                    <TextView
+                    <Button
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:layout_marginBottom="@dimen/layouts_margin"
                         android:background="@color/colorBlue"/>
 
-                    <TextView
+                    <Button
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:background="@color/colorYellow"/>
 
                 </LinearLayout>
 
-                <TextView
+                <Button
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:background="@color/colorLightgreen"/>
