--- a/app/src/main/res/layout/activity_layouts.xml
+++ b/app/src/main/res/layout/activity_layouts.xml
@@ -15,6 +15,6 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackground" />
+        android:background="#ffffff" />
 
 </LinearLayout>
