--- a/app/src/main/res/layout/fragment_layouts_absolute.xml
+++ b/app/src/main/res/layout/fragment_layouts_absolute.xml
@@ -18,14 +18,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <Button
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="60dp"
             android:background="@color/colorRed"/>
 
-        <TextView
+        <Button
             android:layout_width="220dp"
             android:layout_height="110dp"
             android:layout_marginLeft="60dp"
@@ -33,7 +33,7 @@
             android:background="@color/colorLightgreen"
             android:elevation="1dp"/>
 
-        <TextView
+        <Button
             android:layout_width="110dp"
             android:layout_height="300dp"
             android:layout_marginLeft="230dp"
