--- a/app/src/main/res/layout/fragment_layouts_wrap.xml
+++ b/app/src/main/res/layout/fragment_layouts_wrap.xml
@@ -25,13 +25,13 @@
             android:layout_height="100dp"
             android:layout_marginBottom="@dimen/layouts_margin">
 
-            <TextView
+            <Button
                 android:layout_width="175dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/layouts_margin"
                 android:background="@color/colorRed"/>
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -45,13 +45,13 @@
             android:layout_height="100dp"
             android:layout_marginBottom="@dimen/layouts_margin">
 
-            <TextView
+            <Button
                 android:layout_width="230dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/layouts_margin"
                 android:background="@color/colorLightgreen"/>
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -64,19 +64,11 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
 
-            <TextView
+            <Button
                 android:layout_width="175dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/layouts_margin"
                 android:background="@color/colorBlue"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
 
         </LinearLayout>
 
