--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,13 @@
     <color name="colorPrimary">#00C73C</color>
     <color name="colorPrimaryDark">#00912C</color>
     <color name="colorAccent">#469664</color>
+    <color name="colorAccentLight">#54B579</color>
     <color name="colorBackground">#D4D4D4</color>
+    <color name="colorTab">#86D086</color>
     <color name="colorRed">#fe8256</color>
     <color name="colorLightblue">#899bfe</color>
     <color name="colorLightgreen">#455b66</color>
     <color name="colorYellow">#fed03c</color>
     <color name="colorBlue">#3c5bfe</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
