--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="colorYellow">#fed03c</color>
     <color name="colorBlue">#3c5bfe</color>
     <color name="colorTransparent">#00000000</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorActionBar">#151F2F</color>
 </resources>
