--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#00C73C</color>
     <color name="colorPrimaryDark">#00912C</color>
     <color name="colorAccent">#469664</color>
-    <color name="colorAccentLight">#54B579</color>
+    <color name="colorAccentLight">#67749b</color>
     <color name="colorBackground">#D4D4D4</color>
     <color name="colorTab">#86D086</color>
     <color name="colorRed">#fe8256</color>
