--- a/app/src/main/res/layout/ca_listviewitem.xml
+++ b/app/src/main/res/layout/ca_listviewitem.xml
@@ -27,14 +27,13 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:text="00:00 AM - 00:00 PM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_time"
+                android:id="@+id/ca_textView"
                 android:textSize="12dp"
                 android:textColor="#4ac1fa"/>
 
@@ -42,19 +41,21 @@
                 android:text="ROOM 1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_room"
+                android:id="@+id/ca_textView2"
                 android:textSize="12dp"
                 android:textColor="#ffffff"
                 android:layout_marginLeft="4dp"/>
+
         </LinearLayout>
 
         <TextView
             android:text="Android Deep Dive 1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_title"
+            android:id="@+id/ca_textView3"
             android:textSize="20dp"
             android:textColor="#c3c3c3"/>
+
     </LinearLayout>
 
 </LinearLayout>
