--- a/app/src/main/res/layout/fragment_conferenceagenda.xml
+++ b/app/src/main/res/layout/fragment_conferenceagenda.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5b677b">
+    android:background="#667296">
 
     <FrameLayout
         android:layout_width="match_parent"
