--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00C73C</color>
-    <color name="colorPrimaryDark">#00912C</color>
+    <color name="colorPrimaryDark">#00AA40</color>
     <color name="colorAccent">#469664</color>
     <color name="colorAccentLight">#19FFFFFF</color>
     <color name="colorBackground">#D4D4D4</color>
