--- a/app/src/main/res/layout/activity_naverhome.xml
+++ b/app/src/main/res/layout/activity_naverhome.xml
@@ -1,115 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nh_drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        android:background="@color/colorPrimary">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:layout_marginBottom="18dp">
+            android:orientation="vertical"
+            android:background="@color/colorNHPrimary">
 
-            <Button
-                android:id="@+id/nh_button"
-                android:layout_width="24dp"
-                android:layout_height="20dp"
-                android:background="@drawable/ic_menu"
-                android:layout_marginLeft="18dp"
-                android:layout_gravity="center_vertical"/>
-
-            <ImageView
-                android:id="@+id/nh_imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp"
-                app:srcCompat="@drawable/icon_naver"
-                android:layout_gravity="center"/>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="18dp"
-            android:paddingRight="18dp"
-            android:paddingTop="0dp"
-            android:paddingBottom="12dp">
-
-            <SearchView
-                android:id="@+id/nh_searchView"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:iconifiedByDefault="true" />
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="18dp">
 
-        </FrameLayout>
+                <Button
+                    android:id="@+id/nh_button_navopen"
+                    android:layout_width="24dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/ic_menu"
+                    android:layout_marginLeft="18dp"
+                    android:layout_gravity="center_vertical"/>
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/nh_imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"
+                    app:srcCompat="@drawable/icon_naver"
+                    android:layout_gravity="center"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            </FrameLayout>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/nh_tabLayout"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            app:tabTextAppearance="@style/CustomTabText"
-            app:tabTextColor="#000000"
-            app:tabSelectedTextColor="@color/colorPrimary"
-            app:tabIndicatorColor="@color/colorPrimaryDark"
-            app:tabIndicatorHeight="3dp"
-            app:tabMode="scrollable"
-            app:tabMinWidth="20dp"
-            app:tabPaddingStart="7dp"
-            app:tabPaddingEnd="7dp"
-            android:clipToPadding="false"
-            android:background="@drawable/nh_button"/>
-
-        <FrameLayout
-            android:layout_width="46dp"
-            android:layout_height="50dp">
-
-            <Button
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="18dp"
+                android:paddingRight="18dp"
+                android:paddingTop="0dp"
+                android:paddingBottom="12dp">
+
+                <SearchView
+                    android:id="@+id/nh_searchView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#ffffff"
+                    android:iconifiedByDefault="true" />
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/nh_tabLayout"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                app:tabTextAppearance="@style/CustomTabText"
+                app:tabTextColor="#000000"
+                app:tabSelectedTextColor="@color/colorPrimary"
+                app:tabIndicatorColor="@color/colorPrimaryDark"
+                app:tabIndicatorHeight="3dp"
+                app:tabMode="scrollable"
+                app:tabMinWidth="20dp"
+                app:tabPaddingStart="7dp"
+                app:tabPaddingEnd="7dp"
+                android:clipToPadding="false"
                 android:background="@drawable/nh_button"/>
 
-            <ImageView
-                android:layout_width="22dp"
-                android:layout_height="16dp"
-                app:srcCompat="@drawable/icon_down"
-                android:layout_gravity="center" />
+            <FrameLayout
+                android:layout_width="46dp"
+                android:layout_height="50dp">
+
+                <Button
+                    android:id="@+id/nh_button_dropdown"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/nh_button"/>
+
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="16dp"
+                    app:srcCompat="@drawable/icon_down"
+                    android:layout_gravity="center" />
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!--<LinearLayout-->
+                <!--android:id="@+id/nh_layout_dropdown"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="246dp"-->
+                <!--android:background="@color/colorYellow"-->
+                <!--android:visibility="gone"-->
+                <!--android:orientation="vertical">-->
+            <!--</LinearLayout>-->
+
+            <!--<LinearLayout-->
+                <!--android:id="@+id/nh_underbg_dropdown"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:background="@color/colorDropTransparent"-->
+                <!--android:visibility="gone"-->
+                <!--android:orientation="vertical">-->
+            <!--</LinearLayout>-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:background="@color/colorNHBackground"/>
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/nh_viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
 
         </FrameLayout>
 
     </LinearLayout>
 
-    <TextView
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nh_nav_view"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="#f0f0f0"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nh_nav_header"
+        android:layout_marginLeft="-65dp" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/nh_viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
-
-    <WebView
-        android:id="@+id/nh_webView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
