--- a/app/src/main/res/layout/activity_naverother.xml
+++ b/app/src/main/res/layout/activity_naverother.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <WebView
-        android:id="@+id/nh_webView"
+        android:id="@+id/nh_webViewOther"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
