--- a/app/src/main/res/layout/sl_listviewitem.xml
+++ b/app/src/main/res/layout/sl_listviewitem.xml
@@ -5,7 +5,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/sl_itemLayout">
 
     <ImageView
         android:layout_width="wrap_content"
