--- a/app/src/main/res/layout/activity_layouts.xml
+++ b/app/src/main/res/layout/activity_layouts.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,7 +9,9 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#86D086" />
+        android:background="#31bcff"
+        app:tabIndicatorColor="#455b66"
+        app:tabIndicatorHeight="3dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
