--- a/app/src/main/res/layout/activity_userprofile.xml
+++ b/app/src/main/res/layout/activity_userprofile.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:background="#667296">
 
     <ImageView
         android:id="@+id/iv_profile"
-        app:srcCompat="@drawable/profile_image"
-        android:layout_width="98dp"
-        android:layout_height="98dp"
-        android:layout_marginTop="21dp"
+        app:srcCompat="@drawable/user"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:elevation="1dp"/>
 
@@ -19,17 +19,17 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="49dp"
-        android:layout_marginRight="49dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="42dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginBottom="30dp"
         android:background="#ffffff">
 
         <TextView
             android:id="@+id/tv_blankbar"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/colorAccent" />
+            android:layout_height="2dp"
+            android:background="#899BFE" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -38,7 +38,7 @@
             android:layout_weight="1"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:paddingTop="56dp"
+            android:paddingTop="40dp"
             android:paddingBottom="91dp">
 
             <TextView
@@ -46,9 +46,9 @@
                 android:text="Username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorUPtext"
                 android:textSize="12dp"
-                android:paddingLeft="3dp"/>
+                android:paddingLeft="4dp"/>
 
             <EditText
                 android:id="@+id/et_username"
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:text="IloveAndroid"
-                android:textSize="13dp"
+                android:textSize="14dp"
                 android:paddingBottom="16dp" />
 
             <TextView
@@ -64,9 +64,9 @@
                 android:text="Email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorUPtext"
                 android:textSize="12dp"
-                android:paddingLeft="3dp"/>
+                android:paddingLeft="4dp"/>
 
             <EditText
                 android:id="@+id/et_email"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:text="CS409@kaist.ac.kr"
-                android:textSize="13dp"
+                android:textSize="14dp"
                 android:paddingBottom="16dp" />
 
             <TextView
@@ -82,36 +82,39 @@
                 android:text="Password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorUPtext"
                 android:textSize="12dp"
-                android:paddingLeft="3dp"/>
+                android:paddingLeft="4dp"/>
 
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:text="12345678"
-                android:textSize="13dp"
+                android:text="password"
+                android:textSize="14dp"
                 android:paddingBottom="16dp" />
 
             <CheckBox
+                android:theme="@style/checkBoxStyle"
                 android:id="@+id/checkBox"
                 android:text="Show password"
-                android:textSize="15dp"
-                android:textColor="#808080"
-                android:layout_marginLeft="-5dp"
+                android:textSize="16dp"
+                android:textColor="@color/colorUPtext2"
+                android:layout_marginLeft="-2dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:width="18dp"
+                android:height="18dp"/>
 
             <TextView
                 android:id="@+id/tv_bio"
                 android:text="Bio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorUPtext"
                 android:textSize="12dp"
-                android:paddingLeft="3dp"/>
+                android:paddingLeft="4dp"/>
 
             <EditText
                 android:id="@+id/et_bio"
@@ -119,26 +122,29 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:hint="Add bio"
-                android:textSize="13dp"
+                android:textSize="14dp"
                 android:paddingBottom="16dp" />
 
             <Switch
                 android:id="@+id/switch1"
                 android:text="Public profile"
-                android:textSize="15dp"
-                android:textColor="#808080"
+                android:textSize="16dp"
+                android:textColor="@color/colorUPtext2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="3dp"/>
+                android:paddingLeft="4dp"
+                android:thumbTint="#30BCFF"
+                android:trackTint="#BBE9FF"/>
 
         </LinearLayout>
 
         <Button
             android:id="@+id/btn_update"
             android:text="update"
+            android:textSize="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="#30BCFF"
             android:textColor="#ffffff"/>
 
     </LinearLayout>
