--- a/app/src/main/res/layout/fragment_layouts_absolute.xml
+++ b/app/src/main/res/layout/fragment_layouts_absolute.xml
@@ -11,8 +11,9 @@
         android:text="Absolute"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/stv1" />
+        android:layout_marginBottom="16dp"
+        android:id="@+id/stv1"
+        android:textColor="@color/colorLayoutsText"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -26,19 +27,19 @@
             android:background="@color/colorRed"/>
 
         <Button
+            android:layout_width="110dp"
+            android:layout_height="300dp"
+            android:layout_marginLeft="230dp"
+            android:layout_marginTop="120dp"
+            android:background="@color/colorLightblue"/>
+
+        <Button
             android:layout_width="220dp"
             android:layout_height="110dp"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="290dp"
             android:background="@color/colorLightgreen"
             android:elevation="1dp"/>
-
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="300dp"
-            android:layout_marginLeft="230dp"
-            android:layout_marginTop="120dp"
-            android:background="@color/colorLightblue"/>
 
     </FrameLayout>
 
