--- a/app/src/main/res/layout/fragment_layouts_grid.xml
+++ b/app/src/main/res/layout/fragment_layouts_grid.xml
@@ -11,8 +11,9 @@
         android:text="Grid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/stv1" />
+        android:layout_marginBottom="16dp"
+        android:id="@+id/stv1"
+        android:textColor="@color/colorLayoutsText"/>
 
     <LinearLayout
         android:orientation="horizontal"
