--- a/app/src/main/res/layout/fragment_layouts_stack.xml
+++ b/app/src/main/res/layout/fragment_layouts_stack.xml
@@ -13,8 +13,9 @@
         android:text="Stack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/stv1" />
+        android:layout_marginBottom="16dp"
+        android:id="@+id/stv1"
+        android:textColor="@color/colorLayoutsText"/>
 
     <Button
         android:layout_width="match_parent"
