--- a/app/src/main/res/layout/activity_userprofile.xml
+++ b/app/src/main/res/layout/activity_userprofile.xml
@@ -38,8 +38,7 @@
             android:layout_weight="1"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:paddingTop="40dp"
-            android:paddingBottom="91dp">
+            android:paddingTop="40dp">
 
             <TextView
                 android:id="@+id/tv_username"
