--- a/app/src/main/res/layout/ca_listviewitem.xml
+++ b/app/src/main/res/layout/ca_listviewitem.xml
@@ -9,8 +9,8 @@
     android:id="@+id/agendum">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         app:srcCompat="@drawable/add_to_fav"
         android:id="@+id/iv_favorite"
         android:layout_gravity="center"
